[package]
name = "sqlx-example-postgres-todos"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
futures = "0.3"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls"] }
structopt = "0.3"
tokio = { version = "1.46.1", features = ["rt", "macros"] }
dotenvy = "0.15.0"
