[package]
name = "rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
expect-test = "1.5.1"
pretty_assertions = "1.4.1"
proc-macro2 = { version = "1.0.92", features = ["span-locations"] }
quote = "1.0.38"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
syn = { version = "2.0.79", features = ["full", "visit", "extra-traits"] }
wasm-bindgen = { version = "0.2.99", features = ["serde-serialize"] }
