[package]
name = "rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
expect-test = "1.5.1"
pretty_assertions = "1.4.1"
proc-macro2 = { version = "1.0.101", features = ["span-locations"] }
quote = "1.0.40"
serde = { version = "1.0.221", features = ["derive"] }
serde_json = "1.0.144"
syn = { version = "2.0.106", features = ["full", "visit", "extra-traits"] }
wasm-bindgen = { version = "0.2.101", features = ["serde-serialize"] }
